# phosphor-state-manager

./: .chassis_host_manager.hpp.swp  .clang-tidy  .discover_system_state.cpp.swp  .gitignore  .host_state_manager.cp.swp  .meson.build.swp  .meson_options.txt.swp  .utils.cpp.swp  BMC_state_manager.cpp  BMC_state_manager.hpp  BMC_state_manager_main.cpp  MAINTAINERS  Makefile.am  OWNERS  README  README.md  bmc_service_fail.cpp  bmc_state_manager.cpp  bmc_state_manager.hpp  bmc_state_manager_main.cpp  boot_count.hpp  boot_count_main.cpp  boot_progress.hpp  boot_progress_main.cpp  button_handler.cpp  button_handler.hpp  button_handler_main.cpp  chassis_check_power_status.cpp  chassis_state_manager.cpp  chassis_state_manager.hpp  chassis_state_manager_main.cpp  chassis_state_manager_smp.cpp  chassis_state_manager_smp.hpp  chassis_wait_for_smp_poweron.cpp  chassis_wait_for_smp_poweron.hpp  chassiskill.cpp  configure.ac  discover_system_state.cpp  discover_system_state.hpp  drive_state_manager.cpp  (+47 more)
bmc_state_manager/: bmc_state_manager.cpp  bmc_state_manager.hpp  bmc_state_manager_main.cpp  meson.build
chassis_check_power_status/: meson.build
chassis_state_manager/: chassis_state_manager.cpp  meson.build
data/: meson.build  phosphor-service-monitor-default.json  phosphor-target-monitor-default.json
discover_system_state/: discover_system_state.cpp  meson.build
host_condition/: host_condition.cpp  host_condition.hpp  host_condition_main.cpp  meson.build  phosphor-host-condition.service
host_condition_gpio/: host_condition.cpp  host_condition.hpp  host_condition_main.cpp  meson.build  phosphor-host-condition-gpio.service  phosphor-host-condition-gpio@.service
host_reset_recovery/: meson.build
host_state_manager/: host_check.cpp  host_state_manager.hpp  meson.build
hypervisor_state_manager/: hypervisor_state_manager.cpp  meson.build
redundant-bmc/: manager.cpp  manager.hpp  meson.build  rbmc_state_manager_main.cpp  role_determination.cpp  role_determination.hpp
redundant-bmc/test/: meson.build  role_determination_test.cpp
scheduled_host_transition/: meson.build  scheduled_host_transition.cpp  scheduled_host_transition.hpp  scheduled_host_transition_main.cpp
scripts/: host-reboot
secure_boot_check/: meson.build
service_files/: active-bmc-only.conf  meson.build  obmc-power-start@.service  obmc-power-stop@.service  obmc-powered-off@.service  phosphor-bmc-quiesce-reboot.service  phosphor-bmc-security-check.service  phosphor-bmc-service-fail.service  phosphor-chassis-check-power-status@.service  phosphor-chassis-wait-for-smp-poweron.service  phosphor-clear-one-time@.service  phosphor-create-chassis-poweron-log@.service  phosphor-discover-system-state@.service  phosphor-power-stop@.service  phosphor-powered-off@.service  phosphor-reboot-host@.service  phosphor-reset-chassis-on@.service  phosphor-reset-chassis-running@.service  phosphor-reset-host-check@.service  phosphor-reset-host-reboot-attempts@.service  phosphor-reset-host-reboot-attempts@.service.in  phosphor-reset-host-recovery@.service  phosphor-reset-host-running@.service  phosphor-reset-sensor-states@.service  phosphor-set-bmc-active-passive.service  phosphor-set-chassis-transition-to-off@.service  phosphor-set-chassis-transition-to-on@.service  phosphor-set-host-transition-to-off@.service  phosphor-set-host-transition-to-running@.service  phosphor-systemd-target-monitor.service  xyz.openbmc_project.State.BMC.Redundancy.service  xyz.openbmc_project.State.BMC.service  xyz.openbmc_project.State.Chassis.service  xyz.openbmc_project.State.Chassis@.service  xyz.openbmc_project.State.Drive.service  xyz.openbmc_project.State.Drive@.service  xyz.openbmc_project.State.Host.service  xyz.openbmc_project.State.Host@.service  xyz.openbmc_project.State.Hypervisor.service  xyz.openbmc_project.State.ScheduledHostTransition.service  (+1 more)
subprojects/: gpioplus.wrap
systemd_target_monitor/: meson.build  systemd_service_parser.cpp  systemd_service_parser.hpp  systemd_target_monitor.cpp  systemd_target_parser.cpp
target_files/: meson.build  obmc-bios-release-pre@.target  obmc-bios-release@.target  obmc-bmc-active.target  obmc-bmc-quiesce.target  obmc-bmc-service-failure.target  obmc-bmc-service-quiesce@.target  obmc-chassis-blackout@.target  obmc-chassis-hard-poweroff@.target  obmc-chassis-powercycle@.target  obmc-chassis-powered-off@.target  obmc-chassis-poweroff@.target  obmc-chassis-poweron@.target  obmc-chassis-powerreset@.target  obmc-drive-hard-reboot@.target  obmc-drive-powercycle@.target  obmc-drive-powered-off@.target  obmc-drive-powered-on@.target  obmc-drive-poweroff@.target  obmc-drive-poweron@.target  obmc-drive-reboot@.target  obmc-fan-control-ready@.target  obmc-fan-control.target  obmc-fans-ready.target  obmc-host-crash@.target  obmc-host-diagnostic-mode@.target  obmc-host-force-warm-reboot@.target  obmc-host-graceful-quiesce@.target  obmc-host-graceful-shutdown@.target  obmc-host-hardpoweroff@.target  obmc-host-quiesce@.target  obmc-host-reboot@.target  obmc-host-release-pre@.target  obmc-host-release.target  obmc-host-release@.target  obmc-host-reset-running@.target  obmc-host-reset@.target  obmc-host-shutdown@.target  obmc-host-start-pre@.target  obmc-host-start@.target  (+17 more)
test/: Makefile.am  Makefile.am.include  bmc_state.cpp  hypervisor_state.cpp  meson.build  systemd_parser.cpp  systemd_signal.cpp  test_bmc_state_manager.cpp  test_chassis_smp.cpp  test_chassis_smp_enhanced.cpp  test_chassis_wait_smp.cpp  test_host_reset_recovery.cpp  test_host_state_manager.cpp  test_scheduled_host_transition.cpp  test_utility.cpp  utest.cpp
xyz/openbmc_project/State/BMC/: server.hpp
xyz/openbmc_project/State/Chassis/: server.hpp
xyz/openbmc_project/State/Host/: server.hpp
